# PubMedExplorer

./: README.md  miocardiopathy.md  pyproject.toml
app/: __init__.py  pubmed.py  routes.py
config/: pubmed_config.py
static/css/: styles.css
static/js/: LoadingAnimation.jsx  scripts.js  search-suggestions.json
templates/: index.html
tests/: test_api.py
tests/performance/: performance_test.py
tests/performance/implementations/: pubmed_v0.py
